--- a/iTEMS/Views/Projects/Create.cshtml
+++ b/iTEMS/Views/Projects/Create.cshtml
@@ -57,7 +57,7 @@
                     <span asp-validation-for="EstimatedDuration" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="PIC" class="control-label">PIC</label>
+                    <label asp-for="PIC" class="control-label">Person In Charge</label>
                     <input asp-for="PIC" class="form-control" />
                     <span asp-validation-for="PIC" class="text-danger"></span>
                 </div>
