--- a/iTEMS/Views/Home/Index.cshtml
+++ b/iTEMS/Views/Home/Index.cshtml
@@ -155,7 +155,7 @@
             display: inline;
             float: left;
             position: relative;
-            margin-left: 5px;
+            margin-left: 75px;
             margin-right: 5px;
             padding-bottom: 25px;
         }
@@ -255,7 +255,7 @@
                 background-color: #CBFDCB;
                 text-align: center;
                 height: 100%;
-                padding: 10px;
+                padding: 30px;
             }
 
             .footer a {
@@ -267,8 +267,9 @@
                 }
 
         .footer-about li {
-            line-height: 30px;
             list-style: none;
+            text-align: justify;
+            padding-top: 20px;
         }
 
         .footer-widget ul {
@@ -415,19 +416,40 @@
 
                         <ul>
                             <li>
-                                Address: Suite 5-17, Staircase 4,
+                                <i class="fas fa-map-marker-alt"></i> Address: <br>
+                                Suite 5-17, Staircase 4,
                                 Pusat Perdagangan KLH,
                                 Bandar Puchong Jaya,
                                 47100 Puchong,
                                 Selangor
+                                @*Suite 5-17, Staircase 4,
+                                Pusat Perdagangan KLH,
+                                Bandar Puchong Jaya,
+                                47100 Puchong,
+                                Selangor*@
                             </li>
                             <li>
-                                Phone: +60 16-398 2262
+                                <i class="fas fa-phone"></i> Phone: +60 16-398 2262
                             </li>
                             <li>
-                                Email: info@innotechlabs.com.my
+                                <i class="fas fa-envelope"></i> Email: info@innotechlabs.com.my
                             </li>
                         </ul>
+
+                        @* <ul>
+                            <li>
+                                <i class="fas fa-map-marker-alt"></i> Address: <br>
+                                Bandar Puchong Jaya, <br>
+                                47100 Puchong, Selangor
+                            </li>
+                            <li>
+                                <i class="fas fa-phone"></i> Phone: +60 16-398 2262
+                            </li>
+                            <li>
+                                <i class="fas fa-envelope"></i> Email: info@innotechlabs.com.my
+                            </li>
+                        </ul> *@
+
                     </div>
                 </div>
 
