--- a/iTEMS/Views/Projects/Edit.cshtml
+++ b/iTEMS/Views/Projects/Edit.cshtml
@@ -18,9 +18,10 @@
         }
 </style>
 
-<h1>Edit</h1>
-
-<h4>Project</h4>
+<br />
+<br />
+<br />
+<h4>Edit Project</h4>
 <hr />
 <div class="row">
         <form asp-action="Edit" asp-controller="Projects" class="col-md-12" method="post" enctype="multipart/form-data">
