--- a/iTEMS/Views/Home/Index.cshtml
+++ b/iTEMS/Views/Home/Index.cshtml
@@ -329,14 +329,20 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link btn btn-primary text-white" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                    <a class="nav-link btn btn-primary text-white" asp-area="Identity" asp-page="/Account/Login">
+                        <i class="fas fa-sign-in-alt"></i> Login
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-secondary text-white" asp-area="Identity" asp-page="/Account/Register">Sign Up</a>
+                    <a class="nav-link btn btn-secondary text-white" asp-area="Identity" asp-page="/Account/Register">
+                        <i class="fas fa-user-plus"></i> Sign Up
+                    </a>
                 </li>
             </ul>
         </div>
     </nav>
+
+
 
     <!-- Container for the slider -->
     <div class="slider-container">
